compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__remove_redundant_tuple_in_case_subject_nested.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 227
expression: "pub fn main() {\n  case #(case #(0) { #(a) -> 0 }) { #(b) -> 0 }\n}"
---
----- BEFORE ACTION
pub fn main() {
  case #(case #(0) { #(a) -> 0 }) { #(b) -> 0 }
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑          
}


----- AFTER ACTION
pub fn main() {
  case case 0 { a -> 0 } { b -> 0 }
}
