compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__remove_unused_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 174
expression: "\n// test\nimport result.{is_ok} as res\nimport option\n\npub fn main() {\n  is_ok\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{is_ok} as res
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
import option
▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  is_ok
}


----- AFTER ACTION

// test
import result.{is_ok} 

pub fn main() {
  is_ok
}
