compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__remove_unused_simple.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 135
expression: "\n// test\nimport // comment\nlist as lispy\nimport result\nimport option\n\npub fn main() {\n  result.is_ok\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import // comment
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
list as lispy
▔▔▔▔▔▔▔▔▔▔▔▔▔
import result
▔▔▔▔▔▔▔▔▔▔▔▔▔
import option
▔▔▔▔▔▔▔↑     

pub fn main() {
  result.is_ok
}


----- AFTER ACTION

// test

pub fn main() {
  result.is_ok
}
