compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__remove_unused_start_of_file.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 154
expression: "import option\nimport result\n\npub fn main() {\n  result.is_ok\n}\n"
---
----- BEFORE ACTION
import option
▔▔▔▔▔▔▔▔▔▔▔▔▔
import result
▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  result.is_ok
}


----- AFTER ACTION

pub fn main() {
  result.is_ok
}
