compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_bit_array_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 571
expression: "pub fn main() {\n    let assert <<bitValue>> = <<73>>\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert <<bitValue>> = <<73>>
               ▔▔▔▔▔▔▔▔▔▔↑          
}


----- AFTER ACTION
pub fn main() {
    let assert <<bit_value>> = <<73>>
}
