compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_bit_array_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 582
expression: "pub fn main() {\n    let assert <<_iDontCare>> = <<97>>\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert <<_iDontCare>> = <<97>>
               ▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION
pub fn main() {
    let assert <<_i_dont_care>> = <<97>>
}
