compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_case_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 626
expression: "pub fn main() {\n    case 21 { twentyOne -> {Nil} }\n}"
---
----- BEFORE ACTION
pub fn main() {
    case 21 { twentyOne -> {Nil} }
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑     
}


----- AFTER ACTION
pub fn main() {
    case 21 { twenty_one -> {Nil} }
}
