compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_const.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 307
expression: const myInvalid_Constant = 42
---
----- BEFORE ACTION
const myInvalid_Constant = 42
               ↑             


----- AFTER ACTION
const my_invalid_constant = 42
